packages/svelte/tests/compiler-errors/samples/attribute-empty/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'missing-attribute-value',
		message: 'Expected value for the attribute',
		position: [12, 12]
	}
});
